<resources>
    <string name="app_name">Homework First Project</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next fragment</string>
    <string name="previous">Previous fragment</string>

    <!-- Main activity strings resource -->
    <string name="initial_text_textview">No text, write any text below and press save button</string>
    <string name="hint_editText">Write any text here</string>
    <string name="undo_button_name">Undo</string>
    <string name="reset_button_name">Reset</string>
    <string name="saveText_button_name">Save Text</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>