<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.HomeworkFirstProject.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.HomeworkFirstProject.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/include4"
        layout="@layout/content_main" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <Button
        android:id="@+id/saveTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="-100dp"
        android:text="@string/saveText_button_name" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="-220dp"
        android:text="@string/reset_button_name" />

    <Button
        android:id="@+id/undoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="-350dp"
        android:text="@string/undo_button_name" />

    <TextView
        android:id="@+id/textViewContent"
        android:layout_width="235dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="300dp"
        android:text="@string/initial_text_textview"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/inputTextField"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="100dp"
        android:textAlignment="center"
        android:inputType="text"
        android:autofillHints=""
        android:hint="@string/hint_editText" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>